--- a/package.json
+++ b/package.json
@@ -1,4 +1,6 @@
 {
   "name": "cnab_yaml",
-  "version": "0.0.1"
+  "version": "0.0.1",
+  "license": "MIT",
+  "repository": "https://github.com/cnab/cnab-json",
 }
