--- a/package.json
+++ b/package.json
@@ -2,5 +2,5 @@
   "name": "cnab_yaml",
   "version": "0.0.1",
   "license": "MIT",
-  "repository": "https://github.com/cnab/cnab-json",
+  "repository": "https://github.com/cnab/cnab-json"
 }
